транспилировать, исправить блок с удалением при нажатии на корзину

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     </div>
     <button id='deleteAll'>Удалить все</button>
     
-    <script src="script.js"></script>
+    <script src="script.js" type="module"></script>
 </body>
 
 </html>
