--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     </div>
     <button id='deleteAll'>Удалить все</button>
     
-    <script src="script.js" type="module"></script>
+    <script src="script.js" type="module">var exports = {"__esModule": true};</script>
 </body>
 
 </html>
